--- a/index.html
+++ b/index.html
@@ -19,5 +19,139 @@
     <title>Frontend Mentor | Time tracking dashboard</title>
   </head>
 
-  <body></body>
+  <body>
+    <main>
+      <section class="card card-big">
+        <header>
+          <img
+            src="./images/image-jeremy.png"
+            alt="Photo of the account owner Jeremy Robson"
+          />
+
+          <div class="description">
+            <span>Report for</span>
+            <h1>Jeremy Robson</h1>
+          </div>
+        </header>
+
+        <nav>
+          <a href="#" aria-label="Show daily activities" data-period="daily"
+            >Daily</a
+          >
+          <a
+            href="#"
+            aria-label="Show weekly activities"
+            data-period="weekly"
+            class="nav-active"
+            >Weekly</a
+          >
+          <a href="#" aria-label="Show monthly activities" data-period="monthly"
+            >Monthly</a
+          >
+        </nav>
+      </section>
+
+      <section class="card card-1">
+        <header>
+          <h3>Work</h3>
+          <a href="#" aria-label="More informations">
+            <img
+              src="./images/icon-ellipsis.svg"
+              alt="Three dots indicating there is more information"
+            />
+          </a>
+        </header>
+
+        <div class="content">
+          <h2>32hrs</h2>
+          <span>Last Week - 36hrs</span>
+        </div>
+      </section>
+
+      <section class="card card-2">
+        <header>
+          <h3>Play</h3>
+          <a href="#" aria-label="More informations">
+            <img
+              src="./images/icon-ellipsis.svg"
+              alt="Three dots indicating there is more information"
+            />
+          </a>
+        </header>
+
+        <div class="content">
+          <h2>10hrs</h2>
+          <span>Last Week - 8hrs</span>
+        </div>
+      </section>
+
+      <section class="card card-3">
+        <header>
+          <h3>Study</h3>
+          <a href="#" aria-label="More informations">
+            <img
+              src="./images/icon-ellipsis.svg"
+              alt="Three dots indicating there is more information"
+            />
+          </a>
+        </header>
+
+        <div class="content">
+          <h2>4hrs</h2>
+          <span>Last Week - 7hrs</span>
+        </div>
+      </section>
+
+      <section class="card card-4">
+        <header>
+          <h3>Exercise</h3>
+          <a href="#" aria-label="More informations">
+            <img
+              src="./images/icon-ellipsis.svg"
+              alt="Three dots indicating there is more information"
+            />
+          </a>
+        </header>
+
+        <div class="content">
+          <h2>4hrs</h2>
+          <span>Last Week - 5hrs</span>
+        </div>
+      </section>
+
+      <section class="card card-5">
+        <header>
+          <h3>Social</h3>
+          <a href="#" aria-label="More informations">
+            <img
+              src="./images/icon-ellipsis.svg"
+              alt="Three dots indicating there is more information"
+            />
+          </a>
+        </header>
+
+        <div class="content">
+          <h2>5hrs</h2>
+          <span>Last Week - 10hrs</span>
+        </div>
+      </section>
+
+      <section class="card card-6">
+        <header>
+          <h3>Self Care</h3>
+          <a href="#" aria-label="More informations">
+            <img
+              src="./images/icon-ellipsis.svg"
+              alt="Three dots indicating there is more information"
+            />
+          </a>
+        </header>
+
+        <div class="content">
+          <h2>2hrs</h2>
+          <span>Last Week - 2hrs</span>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
