--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             href="#"
             aria-label="Show weekly activities"
             data-period="weekly"
-            class="nav-active"
+            class="active"
             >Weekly</a
           >
           <a href="#" aria-label="Show monthly activities" data-period="monthly"
@@ -55,10 +55,23 @@
         <header>
           <h3>Work</h3>
           <a href="#" aria-label="More informations">
-            <img
-              src="./images/icon-ellipsis.svg"
-              alt="Three dots indicating there is more information"
-            />
+            <svg
+              width="21"
+              height="5"
+              xmlns="http://www.w3.org/2000/svg"
+              aria-labelledby="viewTitle viewDesc"
+              role="img"
+            >
+              <title id="viewTitle">More Informations Icon</title>
+              <desc id="viewDesc">
+                Icon indicating to view more informations on the seclected card
+                item.
+              </desc>
+              <path
+                d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                fill-rule="evenodd"
+              />
+            </svg>
           </a>
         </header>
 
@@ -72,10 +85,23 @@
         <header>
           <h3>Play</h3>
           <a href="#" aria-label="More informations">
-            <img
-              src="./images/icon-ellipsis.svg"
-              alt="Three dots indicating there is more information"
-            />
+            <svg
+              width="21"
+              height="5"
+              xmlns="http://www.w3.org/2000/svg"
+              aria-labelledby="viewTitle viewDesc"
+              role="img"
+            >
+              <title id="viewTitle">More Informations Icon</title>
+              <desc id="viewDesc">
+                Icon indicating to view more informations on the seclected card
+                item.
+              </desc>
+              <path
+                d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                fill-rule="evenodd"
+              />
+            </svg>
           </a>
         </header>
 
@@ -89,10 +115,23 @@
         <header>
           <h3>Study</h3>
           <a href="#" aria-label="More informations">
-            <img
-              src="./images/icon-ellipsis.svg"
-              alt="Three dots indicating there is more information"
-            />
+            <svg
+              width="21"
+              height="5"
+              xmlns="http://www.w3.org/2000/svg"
+              aria-labelledby="viewTitle viewDesc"
+              role="img"
+            >
+              <title id="viewTitle">More Informations Icon</title>
+              <desc id="viewDesc">
+                Icon indicating to view more informations on the seclected card
+                item.
+              </desc>
+              <path
+                d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                fill-rule="evenodd"
+              />
+            </svg>
           </a>
         </header>
 
@@ -106,10 +145,23 @@
         <header>
           <h3>Exercise</h3>
           <a href="#" aria-label="More informations">
-            <img
-              src="./images/icon-ellipsis.svg"
-              alt="Three dots indicating there is more information"
-            />
+            <svg
+              width="21"
+              height="5"
+              xmlns="http://www.w3.org/2000/svg"
+              aria-labelledby="viewTitle viewDesc"
+              role="img"
+            >
+              <title id="viewTitle">More Informations Icon</title>
+              <desc id="viewDesc">
+                Icon indicating to view more informations on the seclected card
+                item.
+              </desc>
+              <path
+                d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                fill-rule="evenodd"
+              />
+            </svg>
           </a>
         </header>
 
@@ -123,10 +175,23 @@
         <header>
           <h3>Social</h3>
           <a href="#" aria-label="More informations">
-            <img
-              src="./images/icon-ellipsis.svg"
-              alt="Three dots indicating there is more information"
-            />
+            <svg
+              width="21"
+              height="5"
+              xmlns="http://www.w3.org/2000/svg"
+              aria-labelledby="viewTitle viewDesc"
+              role="img"
+            >
+              <title id="viewTitle">More Informations Icon</title>
+              <desc id="viewDesc">
+                Icon indicating to view more informations on the seclected card
+                item.
+              </desc>
+              <path
+                d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                fill-rule="evenodd"
+              />
+            </svg>
           </a>
         </header>
 
@@ -140,10 +205,23 @@
         <header>
           <h3>Self Care</h3>
           <a href="#" aria-label="More informations">
-            <img
-              src="./images/icon-ellipsis.svg"
-              alt="Three dots indicating there is more information"
-            />
+            <svg
+              width="21"
+              height="5"
+              xmlns="http://www.w3.org/2000/svg"
+              aria-labelledby="viewTitle viewDesc"
+              role="img"
+            >
+              <title id="viewTitle">More Informations Icon</title>
+              <desc id="viewDesc">
+                Icon indicating to view more informations on the seclected card
+                item.
+              </desc>
+              <path
+                d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                fill-rule="evenodd"
+              />
+            </svg>
           </a>
         </header>
 
