--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/main.css" />
+    <script defer src="./js/app.js"></script>
     <title>Frontend Mentor | Time tracking dashboard</title>
   </head>
 
@@ -35,200 +36,227 @@
         </header>
 
         <nav>
-          <a href="#" aria-label="Show daily activities" data-period="daily"
+          <a href="#" aria-label="Show daily activities" data-timespan="daily"
             >Daily</a
           >
           <a
             href="#"
             aria-label="Show weekly activities"
-            data-period="weekly"
+            data-timespan="weekly"
             class="active"
             >Weekly</a
           >
-          <a href="#" aria-label="Show monthly activities" data-period="monthly"
+          <a
+            href="#"
+            aria-label="Show monthly activities"
+            data-timespan="monthly"
             >Monthly</a
           >
         </nav>
       </section>
 
       <section class="card card-1">
-        <header>
-          <h3>Work</h3>
-          <a href="#" aria-label="More informations">
-            <svg
-              width="21"
-              height="5"
-              xmlns="http://www.w3.org/2000/svg"
-              aria-labelledby="viewTitle viewDesc"
-              role="img"
-            >
-              <title id="viewTitle">More Informations Icon</title>
-              <desc id="viewDesc">
-                Icon indicating to view more informations on the seclected card
-                item.
-              </desc>
-              <path
-                d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
-                fill-rule="evenodd"
-              />
-            </svg>
-          </a>
-        </header>
+        <img
+          src="./images/icon-work.svg"
+          alt="Icon indicating the card belongs to hours worked"
+        />
+        <section>
+          <header>
+            <h3>Work</h3>
+            <a href="#" aria-label="More informations">
+              <svg
+                width="21"
+                height="5"
+                xmlns="http://www.w3.org/2000/svg"
+                aria-labelledby="viewTitle viewDesc"
+                role="img"
+              >
+                <title id="viewTitle">More Informations Icon</title>
+                <desc id="viewDesc">
+                  Icon indicating to view more informations on the seclected
+                  card item.
+                </desc>
+                <path
+                  d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                  fill-rule="evenodd"
+                />
+              </svg>
+            </a>
+          </header>
 
-        <div class="content">
           <h2>32hrs</h2>
           <span>Last Week - 36hrs</span>
-        </div>
+        </section>
       </section>
 
       <section class="card card-2">
-        <header>
-          <h3>Play</h3>
-          <a href="#" aria-label="More informations">
-            <svg
-              width="21"
-              height="5"
-              xmlns="http://www.w3.org/2000/svg"
-              aria-labelledby="viewTitle viewDesc"
-              role="img"
-            >
-              <title id="viewTitle">More Informations Icon</title>
-              <desc id="viewDesc">
-                Icon indicating to view more informations on the seclected card
-                item.
-              </desc>
-              <path
-                d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
-                fill-rule="evenodd"
-              />
-            </svg>
-          </a>
-        </header>
+        <img
+          src="./images/icon-play.svg"
+          alt="Icon indicating the card belongs to hours played"
+        />
+        <section>
+          <header>
+            <h3>Play</h3>
+            <a href="#" aria-label="More informations">
+              <svg
+                width="21"
+                height="5"
+                xmlns="http://www.w3.org/2000/svg"
+                aria-labelledby="viewTitle viewDesc"
+                role="img"
+              >
+                <title id="viewTitle">More Informations Icon</title>
+                <desc id="viewDesc">
+                  Icon indicating to view more informations on the seclected
+                  card item.
+                </desc>
+                <path
+                  d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                  fill-rule="evenodd"
+                />
+              </svg>
+            </a>
+          </header>
 
-        <div class="content">
           <h2>10hrs</h2>
           <span>Last Week - 8hrs</span>
-        </div>
+        </section>
       </section>
 
       <section class="card card-3">
-        <header>
-          <h3>Study</h3>
-          <a href="#" aria-label="More informations">
-            <svg
-              width="21"
-              height="5"
-              xmlns="http://www.w3.org/2000/svg"
-              aria-labelledby="viewTitle viewDesc"
-              role="img"
-            >
-              <title id="viewTitle">More Informations Icon</title>
-              <desc id="viewDesc">
-                Icon indicating to view more informations on the seclected card
-                item.
-              </desc>
-              <path
-                d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
-                fill-rule="evenodd"
-              />
-            </svg>
-          </a>
-        </header>
+        <img
+          src="./images/icon-study.svg"
+          alt="Icon indicating the card belongs to hours studied"
+        />
+        <section>
+          <header>
+            <h3>Study</h3>
+            <a href="#" aria-label="More informations">
+              <svg
+                width="21"
+                height="5"
+                xmlns="http://www.w3.org/2000/svg"
+                aria-labelledby="viewTitle viewDesc"
+                role="img"
+              >
+                <title id="viewTitle">More Informations Icon</title>
+                <desc id="viewDesc">
+                  Icon indicating to view more informations on the seclected
+                  card item.
+                </desc>
+                <path
+                  d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                  fill-rule="evenodd"
+                />
+              </svg>
+            </a>
+          </header>
 
-        <div class="content">
           <h2>4hrs</h2>
           <span>Last Week - 7hrs</span>
-        </div>
+        </section>
       </section>
 
       <section class="card card-4">
-        <header>
-          <h3>Exercise</h3>
-          <a href="#" aria-label="More informations">
-            <svg
-              width="21"
-              height="5"
-              xmlns="http://www.w3.org/2000/svg"
-              aria-labelledby="viewTitle viewDesc"
-              role="img"
-            >
-              <title id="viewTitle">More Informations Icon</title>
-              <desc id="viewDesc">
-                Icon indicating to view more informations on the seclected card
-                item.
-              </desc>
-              <path
-                d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
-                fill-rule="evenodd"
-              />
-            </svg>
-          </a>
-        </header>
+        <img
+          src="./images/icon-exercise.svg"
+          alt="Icon indicating the card belongs to hours exercised"
+        />
+        <section>
+          <header>
+            <h3>Exercise</h3>
+            <a href="#" aria-label="More informations">
+              <svg
+                width="21"
+                height="5"
+                xmlns="http://www.w3.org/2000/svg"
+                aria-labelledby="viewTitle viewDesc"
+                role="img"
+              >
+                <title id="viewTitle">More Informations Icon</title>
+                <desc id="viewDesc">
+                  Icon indicating to view more informations on the seclected
+                  card item.
+                </desc>
+                <path
+                  d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                  fill-rule="evenodd"
+                />
+              </svg>
+            </a>
+          </header>
 
-        <div class="content">
           <h2>4hrs</h2>
           <span>Last Week - 5hrs</span>
-        </div>
+        </section>
       </section>
 
       <section class="card card-5">
-        <header>
-          <h3>Social</h3>
-          <a href="#" aria-label="More informations">
-            <svg
-              width="21"
-              height="5"
-              xmlns="http://www.w3.org/2000/svg"
-              aria-labelledby="viewTitle viewDesc"
-              role="img"
-            >
-              <title id="viewTitle">More Informations Icon</title>
-              <desc id="viewDesc">
-                Icon indicating to view more informations on the seclected card
-                item.
-              </desc>
-              <path
-                d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
-                fill-rule="evenodd"
-              />
-            </svg>
-          </a>
-        </header>
+        <img
+          src="./images/icon-social.svg"
+          alt="Icon indicating the card belongs to hours socialised"
+        />
+        <section>
+          <header>
+            <h3>Social</h3>
+            <a href="#" aria-label="More informations">
+              <svg
+                width="21"
+                height="5"
+                xmlns="http://www.w3.org/2000/svg"
+                aria-labelledby="viewTitle viewDesc"
+                role="img"
+              >
+                <title id="viewTitle">More Informations Icon</title>
+                <desc id="viewDesc">
+                  Icon indicating to view more informations on the seclected
+                  card item.
+                </desc>
+                <path
+                  d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                  fill-rule="evenodd"
+                />
+              </svg>
+            </a>
+          </header>
 
-        <div class="content">
           <h2>5hrs</h2>
           <span>Last Week - 10hrs</span>
-        </div>
+        </section>
       </section>
 
       <section class="card card-6">
-        <header>
-          <h3>Self Care</h3>
-          <a href="#" aria-label="More informations">
-            <svg
-              width="21"
-              height="5"
-              xmlns="http://www.w3.org/2000/svg"
-              aria-labelledby="viewTitle viewDesc"
-              role="img"
-            >
-              <title id="viewTitle">More Informations Icon</title>
-              <desc id="viewDesc">
-                Icon indicating to view more informations on the seclected card
-                item.
-              </desc>
-              <path
-                d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
-                fill-rule="evenodd"
-              />
-            </svg>
-          </a>
-        </header>
+        <img
+          src="./images/icon-self-care.svg"
+          alt="Icon indicating the card belongs to hours taken care of yourself"
+        />
+        <section>
+          <header>
+            <h3>Self Care</h3>
+            <a href="#" aria-label="More informations">
+              <svg
+                width="21"
+                height="5"
+                xmlns="http://www.w3.org/2000/svg"
+                aria-labelledby="viewTitle viewDesc"
+                role="img"
+              >
+                <title id="viewTitle">More Informations Icon</title>
+                <desc id="viewDesc">
+                  Icon indicating to view more informations on the seclected
+                  card item.
+                </desc>
+                <path
+                  d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                  fill-rule="evenodd"
+                />
+              </svg>
+            </a>
+          </header>
 
-        <div class="content">
           <h2>2hrs</h2>
           <span>Last Week - 2hrs</span>
-        </div>
+        </section>
       </section>
     </main>
   </body>
