--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
                 width="21"
                 height="5"
                 xmlns="http://www.w3.org/2000/svg"
-                aria-labelledby="viewTitle viewDesc"
+                aria-labelledby="workTitle workDesc"
                 role="img"
               >
-                <title id="viewTitle">More Informations Icon</title>
-                <desc id="viewDesc">
+                <title id="workTitle">More Informations Icon</title>
+                <desc id="workDesc">
                   Icon indicating to view more informations on the seclected
                   card item.
                 </desc>
@@ -102,11 +102,11 @@
                 width="21"
                 height="5"
                 xmlns="http://www.w3.org/2000/svg"
-                aria-labelledby="viewTitle viewDesc"
+                aria-labelledby="playTitle playDesc"
                 role="img"
               >
-                <title id="viewTitle">More Informations Icon</title>
-                <desc id="viewDesc">
+                <title id="playTitle">More Informations Icon</title>
+                <desc id="playDesc">
                   Icon indicating to view more informations on the seclected
                   card item.
                 </desc>
@@ -136,11 +136,11 @@
                 width="21"
                 height="5"
                 xmlns="http://www.w3.org/2000/svg"
-                aria-labelledby="viewTitle viewDesc"
+                aria-labelledby="studyTitle studyDesc"
                 role="img"
               >
-                <title id="viewTitle">More Informations Icon</title>
-                <desc id="viewDesc">
+                <title id="studyTitle">More Informations Icon</title>
+                <desc id="studyDesc">
                   Icon indicating to view more informations on the seclected
                   card item.
                 </desc>
@@ -170,11 +170,11 @@
                 width="21"
                 height="5"
                 xmlns="http://www.w3.org/2000/svg"
-                aria-labelledby="viewTitle viewDesc"
+                aria-labelledby="exerciseTitle exerciseDesc"
                 role="img"
               >
-                <title id="viewTitle">More Informations Icon</title>
-                <desc id="viewDesc">
+                <title id="exerciseTitle">More Informations Icon</title>
+                <desc id="exerciseDesc">
                   Icon indicating to view more informations on the seclected
                   card item.
                 </desc>
@@ -204,11 +204,11 @@
                 width="21"
                 height="5"
                 xmlns="http://www.w3.org/2000/svg"
-                aria-labelledby="viewTitle viewDesc"
+                aria-labelledby="socialTitle socialDesc"
                 role="img"
               >
-                <title id="viewTitle">More Informations Icon</title>
-                <desc id="viewDesc">
+                <title id="socialTitle">More Informations Icon</title>
+                <desc id="socialDesc">
                   Icon indicating to view more informations on the seclected
                   card item.
                 </desc>
@@ -238,11 +238,11 @@
                 width="21"
                 height="5"
                 xmlns="http://www.w3.org/2000/svg"
-                aria-labelledby="viewTitle viewDesc"
+                aria-labelledby="selfTitle selfDesc"
                 role="img"
               >
-                <title id="viewTitle">More Informations Icon</title>
-                <desc id="viewDesc">
+                <title id="selfTitle">More Informations Icon</title>
+                <desc id="selfDesc">
                   Icon indicating to view more informations on the seclected
                   card item.
                 </desc>
