--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <body>
     <main>
-      <section class="card card-big">
+      <div class="card card-big">
         <header>
           <img
             src="./images/image-jeremy.png"
@@ -53,16 +53,16 @@
             >Monthly</a
           >
         </nav>
-      </section>
+      </div>
 
-      <section class="card card-1">
+      <div class="card card-1">
         <img
           src="./images/icon-work.svg"
           alt="Icon indicating the card belongs to hours worked"
         />
         <section>
           <header>
-            <h3>Work</h3>
+            <h2>Work</h2>
             <a href="#" aria-label="More informations">
               <svg
                 width="21"
@@ -84,19 +84,19 @@
             </a>
           </header>
 
-          <h2>32hrs</h2>
+          <h3>32hrs</h3>
           <span>Last Week - 36hrs</span>
         </section>
-      </section>
+      </div>
 
-      <section class="card card-2">
+      <div class="card card-2">
         <img
           src="./images/icon-play.svg"
           alt="Icon indicating the card belongs to hours played"
         />
         <section>
           <header>
-            <h3>Play</h3>
+            <h2>Play</h2>
             <a href="#" aria-label="More informations">
               <svg
                 width="21"
@@ -118,19 +118,19 @@
             </a>
           </header>
 
-          <h2>10hrs</h2>
+          <h3>10hrs</h3>
           <span>Last Week - 8hrs</span>
         </section>
-      </section>
+      </div>
 
-      <section class="card card-3">
+      <div class="card card-3">
         <img
           src="./images/icon-study.svg"
           alt="Icon indicating the card belongs to hours studied"
         />
         <section>
           <header>
-            <h3>Study</h3>
+            <h2>Study</h2>
             <a href="#" aria-label="More informations">
               <svg
                 width="21"
@@ -152,19 +152,19 @@
             </a>
           </header>
 
-          <h2>4hrs</h2>
+          <h3>4hrs</h3>
           <span>Last Week - 7hrs</span>
         </section>
-      </section>
+      </div>
 
-      <section class="card card-4">
+      <div class="card card-4">
         <img
           src="./images/icon-exercise.svg"
           alt="Icon indicating the card belongs to hours exercised"
         />
         <section>
           <header>
-            <h3>Exercise</h3>
+            <h2>Exercise</h2>
             <a href="#" aria-label="More informations">
               <svg
                 width="21"
@@ -186,19 +186,19 @@
             </a>
           </header>
 
-          <h2>4hrs</h2>
+          <h3>4hrs</h3>
           <span>Last Week - 5hrs</span>
         </section>
-      </section>
+      </div>
 
-      <section class="card card-5">
+      <div class="card card-5">
         <img
           src="./images/icon-social.svg"
           alt="Icon indicating the card belongs to hours socialised"
         />
         <section>
           <header>
-            <h3>Social</h3>
+            <h2>Social</h2>
             <a href="#" aria-label="More informations">
               <svg
                 width="21"
@@ -220,19 +220,19 @@
             </a>
           </header>
 
-          <h2>5hrs</h2>
+          <h3>5hrs</h3>
           <span>Last Week - 10hrs</span>
         </section>
-      </section>
+      </div>
 
-      <section class="card card-6">
+      <div class="card card-6">
         <img
           src="./images/icon-self-care.svg"
           alt="Icon indicating the card belongs to hours taken care of yourself"
         />
         <section>
           <header>
-            <h3>Self Care</h3>
+            <h2>Self Care</h2>
             <a href="#" aria-label="More informations">
               <svg
                 width="21"
@@ -254,10 +254,10 @@
             </a>
           </header>
 
-          <h2>2hrs</h2>
+          <h3>2hrs</h3>
           <span>Last Week - 2hrs</span>
         </section>
-      </section>
+      </div>
     </main>
   </body>
 </html>
